Setup basics of cropping/margining pages for #189
Still work to do for:
- Completing UndoEngine
- Implementing elements shifting
- Bugs with rotated pages